--- a/作业/html/登录.html
+++ b/作业/html/登录.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<script src="jquery-1.11.3.js"></script>
 </head>
 <body>
 	<form action="../php/denglu.php" method="get">
