--- a/作业/html/登录数组.html
+++ b/作业/html/登录数组.html
@@ -13,15 +13,16 @@
 		<script>
 			function fn(){
 				$.ajax({
-					type:"get",
-					url:"../php/denglu.php",
+					type:"post",
+					url:"../php/dengluarray.php",
 					data:{
-						username:$("#username").val(),
-						password:$("#password").val()
+						"username":$("#username").val(),
+						"password":$("#password").val()
 					},
 					success:function(res){
-						// console.log(res)
-						$(".box").html(res);
+						// console.log(res);
+						var str = res == 0 ? "登录成功" : res == 1 ? "密码错误" : "账号不存在";
+						$(".box").html(str);
 					}
 				});
 			}
